<?xml version="1.0"?>
<package>
  <name>rosbook</name>
  <version>0.0.0</version>
  <description>The rosbook package</description>

  <maintainer email="amora@todo.todo">amora</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>



  <export>
  </export>
</package>
