<?xml version="1.0"?>
<package>
  <name>rosbook_basics</name>
  <version>0.0.0</version>
  <description>The rosbook_basics package</description>

  <maintainer email="amora@todo.todo">amora</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
