<?xml version="1.0"?>
<package>
  <name>rosbook_patrol</name>
  <version>0.0.0</version>
  <description>The rosbook_patrol package</description>

  <maintainer email="amora@todo.todo">amora</maintainer>
  <license>TODO</license>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
