<?xml version="1.0"?>
<package>
  <name>rosbook_teleop_bots</name>
  <version>0.0.0</version>
  <description>The rosbook_teleop_bots package</description>

  <maintainer email="amora@todo.todo">amora</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>  
  <run_depend>rospy</run_depend>  
  <run_depend>std_msgs</run_depend>  

  <export>
  </export>
</package>
